--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
-# 強制所有 Python 檔使用 LF 換行
-*.py text eol=lf
+# 統一 LF
+*.py    text eol=lf
+*.yml   text eol=lf
+*.yaml  text eol=lf
+*.md    text eol=lf
+*.sh    text eol=lf
+
+# Windows 批次檔允許 CRLF
+*.bat   text eol=crlf
+*.cmd   text eol=crlf
