--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,24 @@
-name: CI - Python Checks and sort
+name: CI
 
 on:
   pull_request:
+  push:
     branches: [main, dev]
 
 jobs:
-  build:
+  lint-test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest black
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
 
-    - name: Code format check (black)
-      run: black --check .
-
-    - name: Run tests
-      run: pytest
+      - name: Run pre-commit (same as local)
+        run: pre-commit run --all-files
