--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
 [tool.black]
 line-length = 100
-target-version = ["py310"]
+target-version = ["py310"]  # 依你的專案調整 py39/py310/py311
+exclude = '''
+/(
+    \.git
+  | \.venv
+  | \.mypy_cache
+  | \.ruff_cache
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 100
